# auth

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
auth-client/: Cargo.toml
auth-client-http/: Cargo.toml
auth-client-http/src/: lib.rs
auth-client/src/: error.rs  inprocess.rs  lib.rs
auth-core/: Cargo.toml
auth-core/src/: lib.rs
auth-core/src/application/use_cases/: authenticate.rs  issue_token.rs  mod.rs  refresh_token.rs  register_identity.rs  revoke_token.rs
auth-core/src/domain/: mod.rs
auth-core/src/domain/commands/: authenticate.rs  introspect_token.rs  mod.rs  refresh_token.rs  register_identity.rs  revoke_token.rs
auth-core/src/domain/entities/: access_context.rs  auth_session.rs  authenticated_session.rs  identity.rs  login_attempt.rs  mod.rs
auth-core/src/domain/errors/: auth_error.rs  mod.rs
auth-core/src/domain/repositories/: identity_repository.rs  login_attempt_repository.rs  mod.rs  session_repository.rs
auth-core/src/domain/services/: mod.rs  password_service.rs  token_service.rs
auth-middleware-actix/: Cargo.toml
auth-middleware-actix/src/: lib.rs
auth-password-argon2/: Cargo.toml
auth-password-argon2/src/: config.rs  lib.rs
auth-repo-cache/: Cargo.toml
auth-repo-cache/src/: lib.rs
auth-repo-memory/: Cargo.toml
auth-repo-memory/src/: lib.rs
auth-repo-mongodb/: Cargo.toml
auth-repo-mongodb/src/: config.rs  lib.rs
auth-repo-postgres/: Cargo.toml
auth-repo-postgres/src/: config.rs  lib.rs
auth-repo-redis/: Cargo.toml
auth-repo-redis/src/: config.rs  lib.rs
auth-service/: Cargo.toml
auth-service/src/: config.rs  main.rs
auth-token-jwt/: Cargo.toml
auth-token-jwt/src/: config.rs  lib.rs
