[workspace]
members = ["auth-*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Leonardo Merelels"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/leona/auth"

[workspace.dependencies]
actix-service = "2.0.3"
actix-web = "4.13.0"
argon2 = "0.5.3"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
deadpool-postgres = "0.14.1"
dotenvy = "0.15.7"
env_logger = "0.11.8"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
log = "0.4.28"
password-hash = "0.5.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
redis = { version = "0.32.7", features = ["aio", "tokio-comp"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.15", features = ["with-uuid-1", "with-chrono-0_4"] }
utoipa = { version = "5.4.0", features = ["uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }

auth-client = { version = "0.1.0", path = "auth-client" }
auth-client-http = {version = "0.1.0", path = "auth-client-http"}
auth-core = { version = "0.1.0", path = "auth-core" }
auth-password-argon2 = { version = "0.1.0", path = "auth-password-argon2" }
auth-repo-cache = { version = "0.1.0", path = "auth-repo-cache" }
auth-repo-memory = { version = "0.1.0", path = "auth-repo-memory" }
auth-repo-postgres = { version = "0.1.0", path = "auth-repo-postgres" }
auth-repo-redis = { version = "0.1.0", path = "auth-repo-redis" }
auth-token-jwt = { version = "0.1.0", path = "auth-token-jwt" }
