[package]
name = "auth-repo-redis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Redis session and login attempt repositories for auth."

[dependencies]
async-trait.workspace = true
auth-core.workspace = true
chrono.workspace = true
dotenvy.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
