[package]
name = "auth-token-jwt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "JWT token service for auth."

[dependencies]
async-trait.workspace = true
auth-core.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
uuid.workspace = true
dotenvy.workspace = true
sha2.workspace = true

[dev-dependencies]
auth-repo-memory.workspace = true
tokio.workspace = true
